CDC-6: Fixed gradient overlapping when orientation is horizontal

--- a/packages/muze-legend/src/styles.scss
+++ b/packages/muze-legend/src/styles.scss
@@ -36,6 +36,14 @@ $prefix: muze-;
     opacity: 0.8;
 }
 
+.#{$prefix}overflow-y{
+    overflow-y: scroll;
+} 
+
+.#{$prefix}overflow-x{
+    overflow-x: scroll;
+}
+
 .#{$prefix}legend-fadeout {
     fill-opacity: 0.3;
     opacity: 0.3;
